# WC

./: .gitignore  AGENT.md  DATASET_CREATION-DERICTIVE.md  GEMINI.md  PROJECT_REQUIREMENT.md  README.md  RULE IN-SYSTEM FOR .md  bootstrap.py  critical_gaps_analysis.md  data_lineage.md  debug_scraper.py  deep-research-report.md  harness_prompt.txt  pyproject.toml  test_perf_teams.py
.antigravity/: CONVENTIONS.md  CORE_PROBLEM_TO_SOLVE.md  DSA_POLICY.md  SCOPE.md  TASK_STATE.json  TELEMETRY.md  init.sh  verify.sh
.antigravity/rules/: harness.md
.antigravity/skills/: diagnostic-loop.md  grill-me.md  grill-plan.md  optimize-dsa.md  tdd.md  verify-psych-model.md
data/master/: feature_manifest.json  feature_variance_report.csv  oracle_master_features.csv
data/raw/: elo.csv  (+32 more)
models/: .~lock.user_predictions_2026.csv#  benchmark_report.csv  comparative_prediction_report.csv  feature_importance.csv  feature_inventory.csv  feature_names.json  mc_win_probabilities.csv  oracle_v1.pkl  prediction_summary.csv  simulation_results.csv  system_prediction.csv  test.csv  test_mc_results.csv  train.csv  train_normalized.csv  training_teams.csv  user_predictions_2026.csv
scripts/: analyze_skew.py  check_matrix_columns.py  check_ranges.py  diagnose_missing_teams.py  export_normalized_data.py
src/: __init__.py  config.py  database.py  fifa_database.py
tests/: test_away_constant.py  test_config.py  test_database.py  test_feature_variance.py  test_normalization.py  test_outlier_detection.py  test_perf_teams.py  test_scaler_roundtrip.py  test_standardize.py  test_train_matrix.py
(+308 files in other folders)
