[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc-oracle"
version = "0.1.0"
description = "Psychopolitical World Cup 2026 Prediction Engine"
requires-python = ">=3.10"
dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow",
    # Database
    "sqlalchemy>=2.0",
    "alembic",
    # ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm",
    "catboost",
    # Political/Economic
    "wbgapi",
    "pycountry",
    # NLP
    "spacy>=3.7",
    # Web scraping
    "requests",
    "beautifulsoup4",
    "lxml",
    # Visualization
    "plotly",
    "streamlit",
    # Interpretation
    "shap",
    # Network
    "networkx",
    # Stats
    "statsmodels",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
